--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ serde_json = "1.0.40"
 serde_yaml = "0.8.9"
 glob = "0.3.0"
 base64 = "0.10.1"
+regex = "1"
 molysite = { git = "https://github.com/evq/molysite" }
+jmespath = "0.2.0"
 
 [[bin]]
 name = "j2_render"
