--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "CLI to render jinja 2 templates, can use files or env vars as con
 edition = "2018"
 readme = "README.md"
 license = "MIT"
+default-run = "j2_render"
 
 [dependencies]
 tera = "0.11.20"
@@ -26,6 +27,7 @@ features = ["default-tls-vendored"]
 [[bin]]
 name = "j2_render"
 path = "src/main.rs"
+
 
 [[bin]]
 name = "hcl2json"
