--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,15 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-tera = "0.11.20"
-serde = "1.0.99"
+tera = "1"
+serde = "1"
 toml = "0.5.3"
-serde_json = "1.0.40"
+serde_json = "1"
 serde_yaml = "0.8.9"
 glob = "0.3.0"
 base64 = "0.10.1"
 molysite = { git = "https://github.com/evq/molysite" }
+anyhow = "1.0.29"
 
 [[bin]]
 name = "j2_render"
